--- a/content/02-model/03-model-metrics/document.qmd
+++ b/content/02-model/03-model-metrics/document.qmd
@@ -38,8 +38,18 @@ board <- pins::board_rsconnect()
 v <- vetiver_pin_read(board, params$name, version = params$version)
 v_meta <- pin_meta(board, params$name)
 
-con <- odbc::dbConnect(odbc::odbc(), "Content DB", timeout = 10)
-bike_model_data <- tbl(con, "bike_model_data")
+con <- DBI::dbConnect(
+  odbc::odbc(),
+  Driver      = "postgresql",
+  Server      = Sys.getenv("DB_SERVER"),
+  Port        = "5432",
+  Database    = "soleng",
+  UID         = Sys.getenv("DB_USER"),
+  PWD         = Sys.getenv("DB_PASSWORD"),
+  BoolsAsChar = "",
+  timeout     = 10
+)
+bike_model_data <- tbl(con, DBI::Id(schema="content", name="bike_model_data"))
 
 train_start_date <- lubridate::as_date(v$metadata$user$train_dates[1])
 train_end_date <- lubridate::as_date(v$metadata$user$train_dates[2])
