--- a/content/02-model/02-model-card/document.qmd
+++ b/content/02-model/02-model-card/document.qmd
@@ -8,7 +8,7 @@ format:
       source: true
       toggle: true
 params:
-    name: sam.edwardes/bike_predict_model_r
+    name: katie.masiello@posit.co/bike_predict_model_r
     version: NULL
 ---
 
@@ -27,7 +27,7 @@ library(glue)
 library(kableExtra)
 
 
-board <- pins::board_rsconnect()
+board <- pins::board_connect()
 v <- vetiver_pin_read(board, params$name, version = params$version)
 v_meta <- pin_meta(board, params$name)
 
