add explicit plumber dependency

--- a/content/02-model/01-train-and-deploy-model/document.qmd
+++ b/content/02-model/01-train-and-deploy-model/document.qmd
@@ -19,6 +19,7 @@ library(recipes)
 library(parsnip)
 library(workflows)
 library(vetiver)
+library(plumber)
 library(rsconnect)
 
 # Internally developed packages
