--- a/content/01-etl/01-raw-data-refresh/document.qmd
+++ b/content/01-etl/01-raw-data-refresh/document.qmd
@@ -6,7 +6,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-This notebook uses the [bikeHelpR](https://packagemanager.posit.co/client/#/repos/1/packages/bikeHelpR) package to update a database with the latest bike share data. The package pulls data from <https://capitalbikeshare.com> which provides an API to access bike share data. The raw data is written to the *Content DB* database to the *bike_raw_data* table.
+This notebook uses the [bikeHelpR](https://pkg.current.posit.team/client/#/repos/internal-r/packages/bikeHelpR) package to update a database with the latest bike share data. The package pulls data from <https://capitalbikeshare.com> which provides an API to access bike share data. The raw data is written to the *Content DB* database to the *bike_raw_data* table.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
