update v$ptype to v $prototype

--- a/content/02-model/02-model-card/document.qmd
+++ b/content/02-model/02-model-card/document.qmd
@@ -103,7 +103,7 @@ The training data set for this model was was obtained from the [capital bikeshar
 The data set for this model has the "prototype" or signature:
 
 ```{r view_prototype}
-glimpse(v$ptype)
+glimpse(v$prototype)
 ```
 
 ### Training data
